# walutomat-py

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
examples/: README.md  get_balances_example.py  get_fx_rates_example.py
src/walutomat_py/: __init__.py  client.py
tests/: test_client.py
