[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "walutomat-py"
description = "An unofficial Python library for the Walutomat.pl API"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Andrzej Dopierala", email = "undefine@aramin.net" },
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.20.0",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/theundefined/walutomat-py"
"Bug Tracker" = "https://github.com/theundefined/walutomat-py/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    "mypy",
    "cryptography",
    "requests-mock",
    "python-dotenv",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["B008", "C901"]

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.hatch.scripts]
format = "ruff format . && ruff check . --fix"

[tool.hatch.version]
path = "src/walutomat_py/__init__.py"
